work at myhome commit

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name="MyScheduleActivity"></activity>
-        <activity android:name="AddActivity"></activity>
+        <activity android:windowSoftInputMode="stateHidden" android:name="AddActivity"></activity>
     </application>
 
 </manifest>
