--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,8 @@
 
     <uses-sdk android:minSdkVersion="8" />
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -18,8 +20,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="MyScheduleActivity"></activity>
-        <activity android:windowSoftInputMode="stateHidden" android:name="AddActivity"></activity>
+        <activity android:name="MyScheduleActivity" >
+        </activity>
+        <activity
+            android:name="AddActivity"
+            android:windowSoftInputMode="stateHidden" >
+        </activity>
+        <activity android:name="SettingActivity" >
+        </activity>
+        <activity android:name="ModifyActivity" >
+        </activity>
+
+        <receiver
+            android:enabled="true"
+            android:exported="false"
+            android:label="AppBroadcastReceiver.java"
+            android:name=".AppBroadcastReceiver.java" >
+            <intent-filter >
+                <action android:name="android.intent.action.BOOT_COMPLETED" >
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
