--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
         <activity android:name="SettingActivity" >
         </activity>
-        <activity android:name="ModifyActivity" >
+        <activity android:windowSoftInputMode="stateHidden" android:name="ModifyActivity" >
         </activity>
 
         <receiver
