--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,9 +7,10 @@
     <uses-sdk android:minSdkVersion="8" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
@@ -30,17 +31,8 @@
         </activity>
         <activity android:windowSoftInputMode="stateHidden" android:name="ModifyActivity" >
         </activity>
-
-        <receiver
-            android:enabled="true"
-            android:exported="false"
-            android:label="AppBroadcastReceiver.java"
-            android:name=".AppBroadcastReceiver.java" >
-            <intent-filter >
-                <action android:name="android.intent.action.BOOT_COMPLETED" >
-                </action>
-            </intent-filter>
-        </receiver>
+        <receiver android:name=".AlarmReceiver" />
+        <service android:name="AlarmService"></service>
     </application>
 
 </manifest>
